Build SD images with the new blob-less flow

--- a/br2midrive08/configs/midrive08_defconfig
+++ b/br2midrive08/configs/midrive08_defconfig
@@ -10,19 +10,37 @@ BR2_ROOTFS_POST_SCRIPT_ARGS="-c $(BR2_EXTERNAL_MIDRIVE08_PATH)/board/70mai/midri
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/fifteenhex/linux.git"
-BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="msc313e_dev"
+BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="msc313e_dev_v5_6_rebase"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_MIDRIVE08_PATH)/board/70mai/midrive08/linux.config"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
-BR2_LINUX_KERNEL_INTREE_DTS_NAME="mercury5-ssc8336n-midrive08"
+BR2_LINUX_KERNEL_INTREE_DTS_NAME="mercury5-ssc8336n-midrive08 mercury5-ssc8336-mirrorcam"
 BR2_LINUX_KERNEL_DTB_OVERLAY_SUPPORT=y
+BR2_PACKAGE_CACHE_CALIBRATOR=y
+BR2_PACKAGE_DHRYSTONE=y
+BR2_PACKAGE_RAMSPEED=y
+BR2_PACKAGE_TINYMEMBENCH=y
+BR2_PACKAGE_WHETSTONE=y
 BR2_PACKAGE_LINUX_FIRMWARE=y
 BR2_PACKAGE_LINUX_FIRMWARE_RTL_81XX=y
 BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_WIRELESS_REGDB=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
+BR2_TARGET_ROOTFS_CPIO=y
+BR2_TARGET_ROOTFS_CPIO_GZIP=y
 BR2_TARGET_ROOTFS_SQUASHFS=y
 BR2_TARGET_ROOTFS_SQUASHFS4_XZ=y
+BR2_TARGET_UBOOT=y
+BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
+BR2_TARGET_UBOOT_CUSTOM_GIT=y
+BR2_TARGET_UBOOT_CUSTOM_REPO_URL="https://github.com/fifteenhex/u-boot.git"
+BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="8a12cf0028eb1bafb38642f50f6c3e4debe97b04"
+BR2_TARGET_UBOOT_BOARD_DEFCONFIG="mercury5"
+BR2_TARGET_UBOOT_NEEDS_DTC=y
+# BR2_TARGET_UBOOT_FORMAT_BIN is not set
+BR2_TARGET_UBOOT_FORMAT_IMG=y
+BR2_TARGET_UBOOT_SPL=y
+BR2_TARGET_UBOOT_SPL_NAME="ipl"
 BR2_PACKAGE_HOST_DOSFSTOOLS=y
 BR2_PACKAGE_HOST_GENIMAGE=y
 BR2_PACKAGE_HOST_MTOOLS=y
