--- a/br2midrive08/board/70mai/midrive08/genimage.cfg
+++ b/br2midrive08/board/70mai/midrive08/genimage.cfg
@@ -1,32 +1,15 @@
-image kernel.fit.img {
+image kernel.fit {
 	fit {
 		its = "../../../br2midrive08/board/70mai/midrive08/kernel.its"
 	}
 }
 
-flash rtkbundle {
-        pebsize = 4096
-        numpebs = 2048
-}
-
-image rtk {
-	flash {
-        }
-	flashtype = "rtkbundle"
-	partition uboot {
-		image = ../../../br2midrive08/blobs/uboot
-		size = 256K
-	}
-	partition kernel {
-		image = kernel.fit.img
-	}
-}
-
 image boot_part.img {
 	vfat {
-		files = { 
-			../../../br2midrive08/blobs/ipl,
-			rtk
+		files = {
+			ipl,
+			u-boot.img,
+			kernel.fit
 		}
 	}
 	size = 16M
