--- a/br2midrive08/configs/midrive08_defconfig
+++ b/br2midrive08/configs/midrive08_defconfig
@@ -2,9 +2,9 @@ BR2_arm=y
 BR2_cortex_a7=y
 BR2_ARM_FPU_NEON_VFPV4=y
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
-BR2_KERNEL_HEADERS_5_4=y
 BR2_BINUTILS_VERSION_2_33_X=y
 BR2_GCC_VERSION_9_X=y
+BR2_GCC_ENABLE_LTO=y
 BR2_ROOTFS_POST_IMAGE_SCRIPT="support/scripts/genimage.sh"
 BR2_ROOTFS_POST_SCRIPT_ARGS="-c $(BR2_EXTERNAL_MIDRIVE08_PATH)/board/70mai/midrive08/genimage.cfg"
 BR2_LINUX_KERNEL=y
