Config fixes Add uboot env to sd card image

--- a/br2midrive08/board/70mai/midrive08/genimage.cfg
+++ b/br2midrive08/board/70mai/midrive08/genimage.cfg
@@ -6,6 +6,9 @@ image kernel.fit {
 
 image boot_part.img {
 	vfat {
+		file uboot.env {
+			image = "uboot-env.bin"
+		}
 		files = {
 			ipl,
 			u-boot.img,
