--- a/br2midrive08/configs/midrive08_defconfig
+++ b/br2midrive08/configs/midrive08_defconfig
@@ -33,10 +33,17 @@ BR2_TARGET_UBOOT_CUSTOM_REPO_URL="https://github.com/fifteenhex/u-boot.git"
 BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="8a12cf0028eb1bafb38642f50f6c3e4debe97b04"
 BR2_TARGET_UBOOT_BOARD_DEFCONFIG="mercury5"
 BR2_TARGET_UBOOT_NEEDS_DTC=y
+BR2_TARGET_UBOOT_NEEDS_PYTHON3=y
 # BR2_TARGET_UBOOT_FORMAT_BIN is not set
 BR2_TARGET_UBOOT_FORMAT_IMG=y
 BR2_TARGET_UBOOT_SPL=y
 BR2_TARGET_UBOOT_SPL_NAME="ipl"
+BR2_TARGET_UBOOT_ENVIMAGE=y
+BR2_TARGET_UBOOT_ENVIMAGE_SOURCE="$(BR2_EXTERNAL_MIDRIVE08_PATH)/board/70mai/midrive08/uboot.env.in"
+BR2_TARGET_UBOOT_ENVIMAGE_SIZE="0x2000"
 BR2_PACKAGE_HOST_DOSFSTOOLS=y
 BR2_PACKAGE_HOST_GENIMAGE=y
 BR2_PACKAGE_HOST_MTOOLS=y
+BR2_PACKAGE_HOST_UBOOT_TOOLS=y
+BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SUPPORT=y
+BR2_PACKAGE_HOST_UBOOT_TOOLS_FIT_SIGNATURE_SUPPORT=y
