Git release plugin only works with tags :(

--- a/.drone.yml
+++ b/.drone.yml
@@ -62,9 +62,7 @@ steps:
     files: buildroot/output/images/sdcard.img
   when:
     event:
-    - cron
-    cron:
-    - nightly
+    - tag
 
 volumes:
   - name: cache
