Use the right secret key

--- a/.drone.yml
+++ b/.drone.yml
@@ -61,7 +61,7 @@ steps:
   image: plugins/github-release
   settings:
     api_key:
-      from_secret: github_token
+      from_secret: github_key
     files: buildroot/output/images/sdcard.img
   when:
     event:
